--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "webpack": "^3.8.1"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^2.30.1"
+    "clean-webpack-plugin": "^0.1.17",
+    "html-webpack-plugin": "^2.30.1",
+    "ts-loader": "^3.1.1",
+    "typescript": "^2.6.1"
   }
 }
