--- a/package.json
+++ b/package.json
@@ -11,13 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "typescript": "^2.6.1",
     "express": "^4.16.2",
     "webpack": "^3.8.1"
-  },
-  "devDependencies": {
-    "clean-webpack-plugin": "^0.1.17",
-    "html-webpack-plugin": "^2.30.1",
-    "ts-loader": "^3.1.1",
-    "typescript": "^2.6.1"
   }
 }
